# ozmadb

./: .dockerignore  .gitignore  Dockerfile  OzmaDB.sln  README.md  bitbucket-pipelines.yml  build.sh  default.nix  flake.nix  global.json  shell.nix
.config/: dotnet-tools.json
.github/workflows/: build.yml  ozmadb-js.yml  ozmadb-py.yml  ozmadb.yml
FunDB/: FunDB.fsproj  build.sh  config.example.json  config.json  config.my.json  example.pfx  flake.nix  funapp_layout.json  funapp_migration.js  funapp_migration.mjs  funapp_preload.json  packages.lock.json  shell.nix  supervisord.conf
FunDB/soslib/: script.py
FunDB/src/: #Layout.fs#  #View.fs#  Attribute.fs  Connection.fs  Context.fs  ContextCache.fs  Entity.fs  Escape.fs  EventLogger.fs  Exception.fs  FunQL.g  Json.fs  Parsing.fs  Program.fs  Query.fs  Schema.fs  Test.fs  Utils.fs  View.fs
FunDBSchema/: FunDBSchema.csproj  packages.lock.json
FunDBSchema/src/: Attributes.cs  Instances.cs  NpgsqlTimeSpan.cs  PgCatalog.cs  PostgresContext.cs  Schema.cs  System.cs
FunUtils/: FunUtils.fsproj  packages.lock.json
FunUtils/src/: Array.fs  Collections.fs  Exn.fs  Expr.fs  Hash.fs  HashMap.fs  HashSet.fs  IO.fs  JsonMap.fs  List.fs  Map.fs  Null.fs  ObjectMap.fs  Option.fs  OrderedMap.fs  OrderedSet.fs  POSIXPath.fs  Parsing.fs  Reflection.fs  Result.fs  Seq.fs  Set.fs  String.fs  Task.fs  TopLevel.fs  Utils.fs
OzmaDB/: OzmaDB.fsproj  funapp_migration.mjs  packages.lock.json
OzmaDB/src/: Connection.fs  EventLogger.fs  Exception.fs  Parsing.fs  Program.fs
OzmaDBSchema/: OzmaDBSchema.csproj  packages.lock.json
OzmaDBSchema/src/: Attributes.cs  (+6 more)
OzmaUtils/: OzmaUtils.fsproj  packages.lock.json
dev/: Dockerfile.dotnet  clear.sh  clear.sql  config.example.json  deploy.sh  init_instances.sql  setup.sh  update-docker-image.sh  update.sh
docker/: Dockerfile  entrypoint.sh
ozmadb-js/: .eslintrc.json  .gitignore  .npmignore  .prettierignore  .prettierrc.js  README.md  bitbucket-pipelines.yml  build.sh  lint.sh  package.json  rollup.config.js  tsconfig.json
ozmadb-py/: .gitignore  README.md  pyproject.toml
ozmadb-py/ozmadb_py/: auth.py  errors.py  instances.py  ozmadb.py  render.py  types.py  utils.py
soslib/: soslib.py
sql/: init_instances.sql
tests/: test_backtraces_action.js
(+331 files in other folders)
