[tool.poetry]
name = "ozmadb-py"
version = "0.0.8"
description = "Python client library for interacting with the OzmaDB API"
authors = ["Nikolay Amiantov <namiantov@ozma.io>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["ozmadb", "database", "database-client", "python", "client"]
repository = "https://github.com/ozma-io/ozmadb"
homepage = "https://ozma.io/"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">= 3.10"
aiohttp = ">= 3.9.1, < 4.0.0"
pydantic = ">= 2.5.3, < 3.0.0"
pyjwt = ">= 2.8.0, < 3.0.0"
cryptography = ">= 41.0.7"
isodate = "^0.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pyright = "^1.1.369"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
